
[TestGetWebsiteCountries/Base - 1]
RECORDS:
&{StatsCountriesSummary:{Country:US Visitors:166869 VisitorsPercentage:0.3336} Bounces:42022 Duration:4978}
&{StatsCountriesSummary:{Country:JP Visitors:166673 VisitorsPercentage:0.3332} Bounces:41533 Duration:5014}
&{StatsCountriesSummary:{Country:GB Visitors:166646 VisitorsPercentage:0.3332} Bounces:41842 Duration:4987}

---

[TestGetWebsiteCountries/Browser - 1]
RECORDS:
&{StatsCountriesSummary:{Country:JP Visitors:55422 VisitorsPercentage:0.3336} Bounces:13760 Duration:4995}
&{StatsCountriesSummary:{Country:US Visitors:55405 VisitorsPercentage:0.3335} Bounces:13902 Duration:5000}
&{StatsCountriesSummary:{Country:GB Visitors:55318 VisitorsPercentage:0.333} Bounces:13937 Duration:4977}

---

[TestGetWebsiteCountries/Country - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:55318 VisitorsPercentage:1} Bounces:13937 Duration:4977}

---

[TestGetWebsiteCountries/Device - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:18286 VisitorsPercentage:1} Bounces:4601 Duration:4977}

---

[TestGetWebsiteCountries/Empty - 1]
RECORDS:

---

[TestGetWebsiteCountries/Language - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:9154 VisitorsPercentage:1} Bounces:2324 Duration:4946}

---

[TestGetWebsiteCountries/OS - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:3094 VisitorsPercentage:1} Bounces:763 Duration:4925}

---

[TestGetWebsiteCountries/Pathname - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:1041 VisitorsPercentage:1} Bounces:258 Duration:4985}

---

[TestGetWebsiteCountries/Referrer - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:340 VisitorsPercentage:1} Bounces:82 Duration:4865}

---

[TestGetWebsiteCountries/UTMCampaign - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:107 VisitorsPercentage:1} Bounces:24 Duration:5043}

---

[TestGetWebsiteCountries/UTMMedium - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:40 VisitorsPercentage:1} Bounces:7 Duration:5119}

---

[TestGetWebsiteCountries/UTMSource - 1]
RECORDS:
&{StatsCountriesSummary:{Country:GB Visitors:19 VisitorsPercentage:1} Bounces:4 Duration:4172}

---

[TestGetWebsiteCountriesSummary/Base - 1]
RECORDS:
&{Country:US Visitors:166869 VisitorsPercentage:0.3336}
&{Country:JP Visitors:166673 VisitorsPercentage:0.3332}
&{Country:GB Visitors:166646 VisitorsPercentage:0.3332}

---

[TestGetWebsiteCountriesSummary/Browser - 1]
RECORDS:
&{Country:JP Visitors:55422 VisitorsPercentage:0.3336}
&{Country:US Visitors:55405 VisitorsPercentage:0.3335}
&{Country:GB Visitors:55318 VisitorsPercentage:0.333}

---

[TestGetWebsiteCountriesSummary/Country - 1]
RECORDS:
&{Country:GB Visitors:55318 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/Device - 1]
RECORDS:
&{Country:GB Visitors:18286 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteCountriesSummary/Language - 1]
RECORDS:
&{Country:GB Visitors:9154 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/OS - 1]
RECORDS:
&{Country:GB Visitors:3094 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/Pathname - 1]
RECORDS:
&{Country:GB Visitors:1041 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/Referrer - 1]
RECORDS:
&{Country:GB Visitors:340 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/UTMCampaign - 1]
RECORDS:
&{Country:GB Visitors:107 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/UTMMedium - 1]
RECORDS:
&{Country:GB Visitors:40 VisitorsPercentage:1}

---

[TestGetWebsiteCountriesSummary/UTMSource - 1]
RECORDS:
&{Country:GB Visitors:19 VisitorsPercentage:1}

---

[TestGetWebsiteLanguages/Base - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:250302 VisitorsPercentage:0.5004} Bounces:63065 Duration:4987}
&{StatsLanguagesSummary:{Language:jp Visitors:249886 VisitorsPercentage:0.4996} Bounces:62332 Duration:5001}

---

[TestGetWebsiteLanguages/Browser - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:jp Visitors:83135 VisitorsPercentage:0.5004} Bounces:20657 Duration:4993}
&{StatsLanguagesSummary:{Language:en Visitors:83010 VisitorsPercentage:0.4996} Bounces:20942 Duration:4986}

---

[TestGetWebsiteLanguages/Country - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:jp Visitors:27702 VisitorsPercentage:0.5008} Bounces:6855 Duration:5009}
&{StatsLanguagesSummary:{Language:en Visitors:27616 VisitorsPercentage:0.4992} Bounces:7082 Duration:4946}

---

[TestGetWebsiteLanguages/Device - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:9154 VisitorsPercentage:0.5006} Bounces:2324 Duration:4946}
&{StatsLanguagesSummary:{Language:jp Visitors:9132 VisitorsPercentage:0.4994} Bounces:2277 Duration:5004}

---

[TestGetWebsiteLanguages/Empty - 1]
RECORDS:

---

[TestGetWebsiteLanguages/Language - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:9154 VisitorsPercentage:1} Bounces:2324 Duration:4946}

---

[TestGetWebsiteLanguages/OS - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:3094 VisitorsPercentage:1} Bounces:763 Duration:4925}

---

[TestGetWebsiteLanguages/Pathname - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:1041 VisitorsPercentage:1} Bounces:258 Duration:4985}

---

[TestGetWebsiteLanguages/Referrer - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:340 VisitorsPercentage:1} Bounces:82 Duration:4865}

---

[TestGetWebsiteLanguages/UTMCampaign - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:107 VisitorsPercentage:1} Bounces:24 Duration:5043}

---

[TestGetWebsiteLanguages/UTMMedium - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:40 VisitorsPercentage:1} Bounces:7 Duration:5119}

---

[TestGetWebsiteLanguages/UTMSource - 1]
RECORDS:
&{StatsLanguagesSummary:{Language:en Visitors:19 VisitorsPercentage:1} Bounces:4 Duration:4172}

---

[TestGetWebsiteLanguagesSummary/Base - 1]
RECORDS:
&{Language:en Visitors:250302 VisitorsPercentage:0.5004}
&{Language:jp Visitors:249886 VisitorsPercentage:0.4996}

---

[TestGetWebsiteLanguagesSummary/Browser - 1]
RECORDS:
&{Language:jp Visitors:83135 VisitorsPercentage:0.5004}
&{Language:en Visitors:83010 VisitorsPercentage:0.4996}

---

[TestGetWebsiteLanguagesSummary/Country - 1]
RECORDS:
&{Language:jp Visitors:27702 VisitorsPercentage:0.5008}
&{Language:en Visitors:27616 VisitorsPercentage:0.4992}

---

[TestGetWebsiteLanguagesSummary/Device - 1]
RECORDS:
&{Language:en Visitors:9154 VisitorsPercentage:0.5006}
&{Language:jp Visitors:9132 VisitorsPercentage:0.4994}

---

[TestGetWebsiteLanguagesSummary/Empty - 1]
RECORDS:

---

[TestGetWebsiteLanguagesSummary/Language - 1]
RECORDS:
&{Language:en Visitors:9154 VisitorsPercentage:1}

---

[TestGetWebsiteLanguagesSummary/OS - 1]
RECORDS:
&{Language:en Visitors:3094 VisitorsPercentage:1}

---

[TestGetWebsiteLanguagesSummary/Pathname - 1]
RECORDS:
&{Language:en Visitors:1041 VisitorsPercentage:1}

---

[TestGetWebsiteLanguagesSummary/Referrer - 1]
RECORDS:
&{Language:en Visitors:340 VisitorsPercentage:1}

---

[TestGetWebsiteLanguagesSummary/UTMCampaign - 1]
RECORDS:
&{Language:en Visitors:107 VisitorsPercentage:1}

---

[TestGetWebsiteLanguagesSummary/UTMMedium - 1]
RECORDS:
&{Language:en Visitors:40 VisitorsPercentage:1}

---

[TestGetWebsiteLanguagesSummary/UTMSource - 1]
RECORDS:
&{Language:en Visitors:19 VisitorsPercentage:1}

---
